# bmstu-direct

./: .env-example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.ci.yaml  docker-compose.yaml  docker-compose.yml  main.py  makefile  pyproject.toml  requirements.txt
.github/workflows/: bmstu-direct.yaml  deploy.yaml
assets/: swear_words.txt
common/: repository.py  swear_words.py
core/: callbacks.py
core/domain/: __init__.py  banned_user.py  category.py  issue.py  message.py  role.py  status.py  student.py  ticket.py  user.py
core/filters/: role.py
core/handlers/: admin.py  errors.py  keyboards.py  moderator.py  student.py  user.py
core/middlewares/: album.py  db.py  role.py  user_control.py
core/models/: enums.py  role.py  ticket.py
core/schedule/: jobs.py
core/states/: Example.py  Ticket_States.py  __init__.py  answer_got.py  comments_moderator.py  registration.py  ticket.py  ticket_states.py
core/text/: btn.py  errors.py  text.py  ticket.py
core/texts/: __init__.py  buttons.py  commands.py  errors.py  ticket.py
core/utils/: funcs.py  keyboards.py  validators.py  variables.py
services/db/: create_db.py  db_pool.py  models.py  storage.py
services/db/services/: repository.py
