[tool.poetry]
name = "bmstu-direct"
version = "1.0.1"
description = "Сервис для создания обращений в администрацию МГТУ им. Н.Э. Баумана"
authors = [
    "zhikh <zhikh.k@gmail.com>",
    "acruxtech <acrux_tech@mail.ru>",
    "Tr1zel <96981657+Tr1zel@users.noreply.github.com>"
]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "2.15"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
pybars3 = "^0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
